# AI-Career-Copilot

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  alembic.ini  main.py
backend/app/api/middleware/: auth.py  cors.py  exception.py  logging.py  rate_limit.py  request_id.py
backend/app/api/routers/: __init__.py  agent.py  applications.py  auth.py  communication.py  conversation.py  extension_log.py  health.py  jobs.py  match.py  resume.py  session.py  task.py  user.py  workflow.py
backend/app/configs/: .env.example
backend/app/core/: __init__.py  constants.py  exceptions.py  logger.py  settings.py
backend/app/core/security/: __init__.py  jwt.py  password.py
backend/app/domain/agent/: job_analysis_agent.py  service.py
backend/app/domain/application/: models.py  service.py
backend/app/domain/cache/: __init__.py  job.py  resume.py
backend/app/domain/common/: __init__.py  idempotent.py
backend/app/domain/communication/: models.py  service.py
backend/app/domain/job/: extractor.py  models.py  parser.py  service.py
backend/app/domain/match/: __init__.py  models.py  scorer.py  service.py
backend/app/domain/repositories/: __init__.py  application.py  conversation.py  job.py  resume.py  task.py  user.py
backend/app/domain/resume/: models.py  service.py  validator.py
backend/app/domain/task/: __init__.py  dto.py  service.py
backend/app/domain/user/: models.py  service.py  validator.py
backend/migrations/: env.py
backend/migrations/versions/: 0b7ce0cc5d7c_init.py  5dfc58a234f1_add_analysis_result_to_jobs.py  73ba8bba4461_add_created_at_to_applications.py  8f2c3d4e5a6b_add_conversations_table.py  a1b2c3d4e5f6_add_business_unique_key_to_tasks_for_mq_.py  c528168c702d_init_create_all_tables_with_enums_and_.py  e7f8a9b0c1d2_add_salary_unit_to_jobs.py
backend/tests/: conftest.py  test_auth.py  test_auth_integration.py  test_consumer_idempotency.py  test_consumer_registry.py  test_consumer_retry.py  test_exception_integration.py  test_exchanges_topology.py  test_file_reader.py  test_health_integration.py  test_job_analysis_agent.py  test_job_analysis_cache.py  test_job_analysis_consumer.py  test_job_async_flow.py  test_job_extractor.py  test_job_parser.py  test_job_repo.py  test_job_router.py  test_job_service.py  test_lifespan_integration.py  test_llm_extract_tool.py  test_logging_integration.py  test_match_models.py  test_match_scorer.py  test_publisher_confirms.py  test_rate_limit_integration.py  test_request_id_integration.py  test_request_id_unit.py  test_resume_cache.py  test_resume_module.py  test_task_business_unique.py  test_task_repo.py  test_task_service.py  test_web_search_tool.py
backend/tests/integration/: conftest.py  test_mvp_end_to_end.py
boss_nixian/: 01_API_ENDPOINT_ANALYSIS.md  02_FIELD_MAPPING.md  03_INTERCEPTOR_MAIN_WORLD.ts  04_CONTENT_SCRIPT_RECEIVER.ts  05_RISK_ASSESSMENT.md  06_IMPLEMENTATION_EXAMPLE.ts  README.md
boss_nixian/chat/: extract_dom.py
docs/: PRD.md
docs/design/: boss-chat-api-analysis.md  boss-chat-dom-analysis.md  communication-module-spec.md  ui-plugin-design.md
docs/implementation/: boss-job-data-acquisition.md
docs/issues/: 2026-06-17-sqlalchemy-orm-expire-missinggreenlet.md  2026-07-10-boss-interceptor-race-condition-salary-garbled.md  2026-07-10-lazy-load-data-missing-dom-observer-removed.md  2026-07-11-API拦截器失效与懒加载401修复方案.md  2026-07-13-api-interceptor-isolated-world-fix.md  2026-07-15-reopen-popup-no-data.md
docs/match/: benchmark_report.md  design.md
docs/plans/: communication-data-acquisition-fix.md  development_plan.md  mvp_extension_completion_plan.md  mvp_technical_spec.md  post_mvp_development_plan.md  数据采集路径日志时序与数据来源问题修复方案.md
docs/plans/Beta/: communication-module-beta-spec.md
docs/plans/MVP/: communication-module-spec.md  mvp_simplified_plan.md
docs/resume/: AI_Career_Copilot_简历关键决策.md
docs/role/: 写文档的规则.md  项目结构速览提示词.md  项目规则.md
extension/: manifest.json  package-lock.json  package.json  pnpm-lock.yaml  popup.html  sidepanel.html  tsconfig.app.json  vite.config.ts
extension/public/: interceptor.js
extension/scripts/: capture-boss-api.mjs  convert-icon.mjs
extension/src/: App.vue  style.css
extension/src/background/: backend_client.ts  interceptor_injector.ts  router.ts  service_worker.ts  source_url_map.ts  task_poller.ts
extension/src/components/: LoginPanel.vue
extension/src/composables/: useJobPipeline.ts
extension/src/content/: content.ts
extension/src/logging/: remote_logger.ts
extension/src/messaging/: chrome_message.ts
extension/src/popup/: App.vue  main.ts
extension/src/sidepanel/: main.ts
extension/src/stores/: communication.ts  resume.ts  sidepanel.ts
extension/src/types/: communication.ts  job.ts  resume.ts
(+71 files in other folders)
