[project]
name = "ai-career-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langserve>=0.3.3",
    "langsmith>=0.8.15",
    "loguru>=0.7.3",
    "mypy>=2.1.0",
    "playwright>=1.60.0",
    "pre-commit>=4.6.0",
    "pydantic-settings>=2.14.1",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.17",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
