[project]
name = "ai-career-copilot"
version = "0.1.0"
description = "AI 驱动的求职辅助系统：简历解析、岗位匹配、自动投递、智能 Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web 框架与异步运行时
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    # 缓存与消息队列
    "redis>=8.0.0",
    "aio-pika>=9.5.0",
    # 数据库扩展
    "pgvector>=0.4.1",
    # 鉴权
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    # 协程上下文管理
    "contextvars>=2.4",
    # LangChain 生态
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langserve>=0.3.3",
    "langsmith>=0.8.15",
    # 日志
    "loguru>=0.7.3",
    "pytest-asyncio>=1.4.0",
]

# ==================== Dev 依赖 ====================
# PEP 735 dependency groups：uv sync --group dev 安装
# 显式与运行时依赖分离，避免 dev 工具进入生产镜像
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]

# ==================== 构建系统 ====================
# hatchling 作为构建后端：uv 默认、配置最少、生态完善
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 包映射：backend/app 在文件系统中是 backend/app/，导入名为 app
# 这样 `from app.xxx import yyy` 仍然成立
[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
include = ["backend/main.py"]

# ==================== Ruff ====================
# 单一配置文件替代 flake8/isort/black/pyupgrade/flake8-bugbear
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist", "migrations/versions"]

[tool.ruff.lint]
# 覆盖常见错误 + 风格 + 异步安全 + 类型注解升级
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes（未使用 import/变量、未定义名称）
    "I",     # isort
    "B",     # flake8-bugbear（常见 bug 模式）
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade（自动用新语法）
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async（async/await 安全）
    "RUF",   # ruff 专属规则
]
ignore = [
    "E501",  # 行长度（line-length 已统一控制）
    "B008",  # 函数调用作为参数默认值（FastAPI Depends 必需）
    "N818",  # 异常类必须以 Error 结尾（项目自定义 BaseException）
    "B904",  # raise from 在 async 上下文中误报，与 E0702 重复
    # 中文文档/注释使用全角符号是项目既定风格（与 main.py / settings.py 一致）
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# 测试中允许 assert False / 未使用导入
"backend/tests/**" = ["B011", "F401", "F811"]
# 自动生成的迁移脚本不强制风格
"backend/migrations/versions/**" = ["E", "F", "I", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app", "backend"]
combine-as-imports = true

# ==================== MyPy ====================
# 渐进式严格：开启关键安全检查，但不强制所有函数带注解
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
# 第三方库没类型注解时不报错（langchain 部分模块 stub 不全）
ignore_missing_imports = true

[[tool.mypy.overrides]]
# 测试文件允许函数无注解
module = "tests.*"
disallow_untyped_defs = false

# ==================== Pytest ====================
# 配置 pytest 行为：async 自动识别 + 严格 marker + 显示局部变量
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",              # 失败时显示摘要
    "--strict-markers", # 未注册的 marker 立即报错
    "--showlocals",     # 失败时显示局部变量
    "--tb=short",       # 简洁 traceback
]
# 测试根目录：tests 写在 backend/tests/ 下
testpaths = ["backend/tests"]
# async 测试模式：auto = 所有 async 函数自动视为 async test
asyncio_mode = "auto"
# 把 backend/ 加到 PYTHONPATH，使 `from app.xxx import yyy` 可解析
pythonpath = ["backend"]
# 警告变错误，让潜在问题在 CI 阶段就暴露
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:fastapi.*",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: 集成测试，需要真实 PostgreSQL/Redis/RabbitMQ",
    "unit: 单元测试",
    "slow: 慢速测试（>1s）",
]
